# magnet.cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  convert.py  magnet.cpp  magnet.h
assets/small/: named_parameters.txt
cfg/: hparams.json  loaded_hparams.json
tests/: test_transformer.py
